# nllfit

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  changes.diff  pyproject.toml
docs/: COMPREHENSIVE_GUIDE.md
examples/: basic_usage.py
hetero_nll/: __init__.py  calibration.py  metrics.py  oof.py  types.py
hetero_nll/estimators/: __init__.py  base.py  glum.py  lightgbm.py
nllfit/: __init__.py  calibration.py  conformal.py  distributions.py  lognormal.py  metrics.py  oof.py  splitting.py  types.py  validation.py
nllfit/estimators/: glum.py  lightgbm.py
tests/: test_calibration.py  test_conformal.py  test_glum_smoke.py  test_laplace.py  test_lightgbm_smoke.py  test_lognormal.py  test_metrics.py  test_oof.py  test_splitting.py  test_student_t.py  test_validation.py  test_weights_end_to_end.py
