[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nllfit"
version = "0.1.0"
description = "Two-stage heteroscedastic regression utilities for Gaussian NLL (glum + LightGBM)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Your Name"}]
dependencies = [
  "numpy>=1.23",
  "scikit-learn>=1.2",
]

[project.optional-dependencies]
glum = ["glum>=2.3"]
lgbm = ["lightgbm>=4.0"]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.3",
  "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nllfit*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]


[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true


[tool.setuptools]
include-package-data = true
